--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-test-renderer": "^18.2.0",
     "redux": "^4.2.0",
     "styled-components": "^5.3.6",
