--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://VicTyslenko.github.io/react-apple-store",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
